--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,17 @@ dependencies:
   infinite_scroll_pagination: ^3.2.0
   expandable_text: ^2.3.0
   cached_network_image: ^3.2.3
+  youtube_player_flutter: ^8.1.2
+  google_fonts: ^3.0.1
+  video_thumbnail: ^0.5.3
+  card_swiper: ^2.0.4
+  visibility_detector: ^0.3.3
+  tuple: ^2.0.1
+
+  flutter_group_sliver:
+    git: https://github.com/ShahoodulHassan/flutter_group_sliver
+  sliver_tools: ^0.2.8
+  copy_with_extension: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +76,7 @@ dev_dependencies:
   retrofit_generator: '>=4.0.0 <5.0.0'
   build_runner: '>2.3.0 <4.0.0'
   json_serializable: ^6.5.4
+  copy_with_extension_gen: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
