--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   retrofit: '>=3.0.0 <4.0.0'
-  json_annotation: ^4.7.0
+  json_annotation: ^4.8.0
   provider: ^6.0.4
   rxdart: ^0.27.5
   share_plus: ^6.3.0
@@ -60,8 +60,9 @@ dependencies:
 
   flutter_group_sliver:
     git: https://github.com/ShahoodulHassan/flutter_group_sliver
-  sliver_tools: ^0.2.8
+  sliver_tools: ^0.2.9
   copy_with_extension: ^5.0.0
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +76,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   retrofit_generator: '>=4.0.0 <5.0.0'
   build_runner: '>2.3.0 <4.0.0'
-  json_serializable: ^6.5.4
+  json_serializable: ^6.6.1
   copy_with_extension_gen: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
