--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,9 @@ dependencies:
   provider: ^6.0.4
   rxdart: ^0.27.5
   share_plus: ^6.3.0
-  url_launcher: ^6.1.6
+  url_launcher: ^6.1.9
   package_info_plus: ^3.0.2
-  fluttertoast: ^8.0.9
+  fluttertoast: ^8.1.3
   vibration: ^1.7.6
   font_awesome_flutter: ^10.2.1
   intl: ^0.18.0
@@ -63,6 +63,7 @@ dependencies:
   sliver_tools: ^0.2.9
   copy_with_extension: ^5.0.0
   shared_preferences: ^2.0.17
+  age_calculator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
