--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   copy_with_extension: ^5.0.0
   shared_preferences: ^2.0.17
   age_calculator: ^1.0.0
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
