--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   shared_preferences: ^2.0.17
   age_calculator: ^1.0.0
   photo_view: ^0.14.0
+  animated_list_plus: ^0.4.5
 
 dev_dependencies:
   flutter_test:
