--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   shared_preferences: ^2.0.17
   age_calculator: ^1.0.0
   photo_view: ^0.14.0
+  flutter_launcher_icons: ^0.12.0
 #  animated_list_plus: ^0.4.5 # Remove
 
 dev_dependencies:
@@ -81,6 +82,24 @@ dev_dependencies:
   build_runner: '>2.3.0 <4.0.0'
   json_serializable: ^6.6.1
   copy_with_extension_gen: ^5.0.0
+  flutter_native_splash: ^2.2.18
+
+# adaptive icons were generated using Android Studio Image Asset Generator
+flutter_icons:
+  image_path_android: "assets/icons/cinema_scope_icon.png"
+  image_path_ios: "assets/icons/cinema_scope_icon.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+#  adaptive_icon_background: "assets/icons/ic_launcher_background.png" # 432 x 432 only available for Android 8.0 devices and above
+#  adaptive_icon_foreground: "assets/icons/ic_launcher_foreground.png" # 432 x 432 only available for Android 8.0 devices and above
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
+
+# The foreground received from the designer has been used
+# The background created by the AS Image Asset Generator has been used
+flutter_native_splash:
+  background_image: "assets/icons/ic_launcher_background.png"
+  image: "assets/icons/ic_launcher_foreground.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
