--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   age_calculator: ^1.0.0
   photo_view: ^0.14.0
   flutter_launcher_icons: ^0.12.0
+  image_network: ^2.5.1
 #  animated_list_plus: ^0.4.5 # Remove
 
 dev_dependencies:
