--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   photo_view: ^0.14.0
   flutter_launcher_icons: ^0.12.0
   image_network: ^2.5.1
+  dynamic_color: ^1.6.2
 #  animated_list_plus: ^0.4.5 # Remove
 
 dev_dependencies:
