--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   image_network: ^2.5.1
   dynamic_color: ^1.6.2
+  dio: ^4.0.6
 #  animated_list_plus: ^0.4.5 # Remove
 
 dev_dependencies:
