--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=3.0.0 <=3.10.2'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,7 +42,7 @@ dependencies:
   rxdart: ^0.27.5
   share_plus: ^6.3.0
   url_launcher: ^6.1.9
-  package_info_plus: ^3.0.2
+  package_info_plus: ^3.1.2
   fluttertoast: ^8.1.3
   vibration: ^1.7.6
   font_awesome_flutter: ^10.2.1
@@ -69,7 +69,7 @@ dependencies:
   image_network: ^2.5.1
   dynamic_color: ^1.6.2
   dio: ^4.0.6
-#  animated_list_plus: ^0.4.5 # Remove
+  flutter_screenutil: ^5.8.3
 
 dev_dependencies:
   flutter_test:
@@ -89,8 +89,8 @@ dev_dependencies:
 
 # adaptive icons were generated using Android Studio Image Asset Generator
 flutter_icons:
-  image_path_android: "assets/icons/cinema_scope_icon.png"
-  image_path_ios: "assets/icons/cinema_scope_icon.png"
+  image_path_android: "assets/icons/cinema_scope_icon_v2.1.jpg"
+  image_path_ios: "assets/icons/cinema_scope_icon_v2.1.jpg"
   android: true # can specify file name here e.g. "ic_launcher"
   ios: true # can specify file name here e.g. "My-Launcher-Icon"
 #  adaptive_icon_background: "assets/icons/ic_launcher_background.png" # 432 x 432 only available for Android 8.0 devices and above
@@ -101,8 +101,10 @@ flutter_icons:
 # The foreground received from the designer has been used
 # The background created by the AS Image Asset Generator has been used
 flutter_native_splash:
-  background_image: "assets/icons/ic_launcher_background.png"
-  image: "assets/icons/ic_launcher_foreground.png"
+  background_image: "assets/icons/ic_launcher_background_v2.png"
+  image: "assets/icons/ic_launcher_foreground_v2.1.png"
+  background_image_dark: "assets/icons/ic_launcher_background_v2.png"
+  image_dark: "assets/icons/ic_launcher_foreground_v2.1.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
