--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   dynamic_color: ^1.6.2
   dio: ^4.0.6
   flutter_screenutil: ^5.8.3
+  flutter_layout_grid: ^2.0.3
+  flutter_sticky_header: ^0.6.5
 
 dev_dependencies:
   flutter_test:
