--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   provider: ^6.0.4
   rxdart: ^0.27.5
   share_plus: ^6.3.0
-  url_launcher: ^6.1.9
+  url_launcher: ^6.1.14
   package_info_plus: ^3.1.2
   fluttertoast: ^8.1.3
   vibration: ^1.7.6
@@ -63,7 +63,7 @@ dependencies:
 
 #  flutter_group_sliver: # Remove
 #    git: https://github.com/ShahoodulHassan/flutter_group_sliver
-  sliver_tools: ^0.2.9
+  sliver_tools: ^0.2.12
   copy_with_extension: ^5.0.0
   shared_preferences: ^2.0.17
   age_calculator: ^1.0.0
@@ -78,6 +78,7 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   gallery_saver: ^2.3.2
   external_path: ^1.0.3
+  flutter_inappwebview: ^5.7.2+3
 
 dev_dependencies:
   flutter_test:
