--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <=3.10.2'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,33 +36,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  retrofit: '>=3.0.0 <4.0.0'
+  retrofit: ^4.4.2
   json_annotation: ^4.8.0
   provider: ^6.0.4
   rxdart: ^0.27.5
-  share_plus: ^6.3.0
-  url_launcher: ^6.1.14
-  package_info_plus: ^3.1.2
-  fluttertoast: ^8.1.3
+  share_plus: ^10.1.4
+  url_launcher: ^6.3.1
+  package_info_plus: ^8.1.3
+  fluttertoast: ^8.2.10
   vibration: ^1.7.6
   font_awesome_flutter: ^10.2.1
-  intl: ^0.18.0
+  intl: ^0.19.0
   async: ^2.9.0
-  infinite_scroll_pagination: ^3.2.0
+  infinite_scroll_pagination: ^4.1.0
   expandable_text: ^2.3.0
-  cached_network_image: ^3.2.3
-  youtube_player_flutter:
-    git:
-      url: http://github.com/ShahoodulHassan/youtube_player_flutter/
-      path: packages/youtube_player_flutter
+  cached_network_image: ^3.4.1
+  youtube_player_flutter: ^9.1.1
+#  youtube_player_flutter:
+#    git:
+#      url: http://github.com/ShahoodulHassan/youtube_player_flutter/
+#      path: packages/youtube_player_flutter
   google_fonts: ^4.0.1
   video_thumbnail: ^0.5.3
   card_swiper: ^2.0.4
 #  visibility_detector: ^0.3.3 # Remove
   tuple: ^2.0.1
 
-#  flutter_group_sliver: # Remove
-#    git: https://github.com/ShahoodulHassan/flutter_group_sliver
   sliver_tools: ^0.2.12
   copy_with_extension: ^5.0.0
   shared_preferences: ^2.0.17
@@ -71,15 +70,16 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   image_network: ^2.5.1
   dynamic_color: ^1.6.2
-  dio: ^4.0.6
-  flutter_screenutil: ^5.8.3
-  flutter_layout_grid: ^2.0.3
-  flutter_sticky_header: ^0.6.5
+  dio: ^5.7.0
+  flutter_screenutil: ^5.9.3
+  flutter_layout_grid: ^2.0.7
+  flutter_sticky_header: ^0.7.0
   flutter_cache_manager: ^3.3.1
-  gallery_saver: ^2.3.2
-  external_path: ^1.0.3
-  flutter_inappwebview: ^5.7.2+3
-
+  external_path: ^2.0.1
+  permission_handler: ^11.3.1
+  gal: ^2.3.1
+  flutter_custom_tabs: ^2.1.0
+#  flutter_inappwebview: ^6.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -90,8 +90,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  retrofit_generator: '>=4.0.0 <5.0.0'
-  build_runner: '>2.3.0 <4.0.0'
+  retrofit_generator: ^9.1.7
+  build_runner: ^2.4.14
   json_serializable: ^6.6.1
   copy_with_extension_gen: ^5.0.0
   flutter_native_splash: ^2.2.18
