--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,7 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=C\:\\Program Files\\Java\\jdk-17
+
+## Instead of setting JAVA_HOME inside Gradle, set it globally using
+## environment variables on both Windows and macOS:
+# org.gradle.java.home=C\:\\Program Files\\Java\\jdk-17
