--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ dependencies:
   photo_view: ^0.14.0
   flutter_launcher_icons: ^0.12.0
   image_network: ^2.5.1
-  dynamic_color: ^1.6.2
+#  dynamic_color: ^1.6.2
   dio: ^5.7.0
   flutter_screenutil: ^5.9.3
   flutter_layout_grid: ^2.0.7
@@ -79,7 +79,7 @@ dependencies:
   permission_handler: ^11.3.1
   gal: ^2.3.1
   flutter_custom_tabs: ^2.1.0
-#  flutter_inappwebview: ^6.1.5
+#  path_provider: ^2.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
